--- a/Projects/w3_band/assets/css/header.css
+++ b/Projects/w3_band/assets/css/header.css
@@ -1,21 +1,3 @@
-:root
-{
-    --header-height: 7vh;
-}
-/* Reset CSS */
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html 
-{
-    font-family: Helvetica, Arial,  sans-serif;
-    font-size: 2vh;
-}
-
-
 #header
 {
     background: #000;
@@ -24,7 +6,7 @@ html
     display: inline-block;
     position: fixed;
     top:0;
-
+    z-index: 1;
 }
 
 /* Begin Nav */
@@ -77,6 +59,7 @@ html
 {
     color: black;
     display: block;
+    padding: 0 4vh 0 4vh;
 }
 
 #nav .subnav a:hover
